--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,14 @@ include_directories(back_end)
 include_directories(sjtu_hpp_library)
 
 add_executable(code
-        back_end/bptree.hpp
-        back_end/bptree_roll.hpp
-        back_end/bufferList.hpp
-        back_end/database.hpp
-        back_end/main.cpp
-        back_end/order.hpp
-        back_end/parser.hpp
-        back_end/train.hpp
-        back_end/user.hpp
+        back_end_normal/bptree.hpp
+        back_end_normal/bufferList.hpp
+        back_end_normal/database.hpp
+        back_end_normal/main.cpp
+        back_end_normal/order.hpp
+        back_end_normal/parser.hpp
+        back_end_normal/train.hpp
+        back_end_normal/user.hpp
         sjtu_hpp_library/date.hpp
         sjtu_hpp_library/exceptions.hpp
         sjtu_hpp_library/linked_hashmap.hpp
